# podcast-downloader

./: .gitignore  README.md  main.py  pyproject.toml  test_cui.py
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/core/code/: code-summary.md
aidlc-docs/construction/core/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/gui/code/: code-summary.md
aidlc-docs/construction/plans/: core-code-generation-plan.md  core-functional-design-plan.md  core-nfr-requirements-plan.md  gui-code-generation-plan.md  gui-functional-design-plan.md  gui-nfr-requirements-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  unit-of-work-plan.md
aidlc-docs/inception/requirements/: requirement-clarification-questions.md  requirement-verification-questions.md  requirements.md
podcast_downloader/: __main__.py
podcast_downloader/core/: downloader.py  duration_parser.py  models.py  rss_parser.py  settings_manager.py
podcast_downloader/gui/: download_panel.py  episode_list.py  feed_panel.py  main_window.py  settings_dialog.py
tests/: test_downloader.py  test_duration_parser.py  test_rss_parser.py  test_settings_manager.py
(+11 files in other folders)
