[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-downloader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "platformdirs>=4.0",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
podcast-downloader = "podcast_downloader.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["podcast_downloader*"]
